[package]
name = "bcm2837"
version = "2.6.0"
authors = [
    "equation314 <equation618@gmail.com>",
    "Tianyu Gao <gaotianyu1350@126.com>",
    "BenjaminPMLovegood <benjaminpmlee@gmail.com>",
]
edition = "2018"

[features]
lower_va_range = []

[dependencies]
log = "0.4"
volatile = "0.2.4"
#aarch64= { git = "https://github.com/rcore-os/aarch64", rev = "b7ea2a5" }
#aarch64= { git = "https://github.com/lhw2002426/aarch64"}
aarch64-cpu = "9.3"
tock-registers = "0.8"
#cortex-a = { git = "https://github.com/rust-embedded/cortex-a"}
